# h5netcdf

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  CHANGELOG.rst  CNAME  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  api.html  changelog.html  devguide.html  environment.yml  feature.html  genindex.html  h5netcdf_test.h5  index.html  legacyapi.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  test.nc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
_build/: README_included.html
_sources/: api.rst  changelog.rst  devguide.rst  feature.rst  feature.rst.txt  index.rst  index.rst.txt
_sources/_build/: README_included.rst
_static/: documentation_options.js
doc/: Makefile  api.rst  changelog.rst  conf.py  devguide.rst  feature.rst  index.rst  legacyapi.rst  readme.rst
h5netcdf/: __init__.py  _chainmap.py  _version.py  attrs.py  compat.py  core.py  dimensions.py  legacyapi.py  utils.py
h5netcdf/tests/: __init__.py  conftest.py  h5netcdf_test.h5  pytest.ini  test.nc  test_h5netcdf.py  test_h5netcdf_pyfive.py
