[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "h5netcdf"
description = "netCDF4 via h5py"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    { name = "Stephan Hoyer", email = "shoyer@gmail.com" },
    { name = "Kai Mühlbauer", email = "kmuehlbauer@wradlib.org" },
]
maintainers = [
    { name = "h5netcdf developers", email = "devteam@h5netcdf.org" }
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = ["h5py", "packaging"]

dynamic = ["version", "readme"]

[project.urls]
homepage = "https://h5netcdf.org"
documentation = "https://h5netcdf.org"
repository = "https://github.com/h5netcdf/h5netcdf"
changelog = "https://github.com/h5netcdf/h5netcdf/blob/main/CHANGELOG.rst"

[project.optional-dependencies]
test = ["netCDF4", "pytest"]

[tool.setuptools.dynamic]
readme = { file = ["README.rst"]}

[tool.setuptools]
packages = ["h5netcdf", "h5netcdf.tests"]

[tool.setuptools_scm]
write_to = "h5netcdf/_version.py"
version_scheme = "release-branch-semver"
fallback_version = "999"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "doc",
]

# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
lint.ignore = [
    "E402",
    "E501",
    "E731",
]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["h5netcdf"]
